--- a/index.html
+++ b/index.html
@@ -77,10 +77,57 @@
 							</div>
 						</div>
 					</div>
-					
 				</div>
 				<div class="body__content__three">
-					
+					<div class="body__content__three__first">
+						Вертикальное выравнивание
+					</div>
+					<div class="body__content__three__second">
+						<div class="body__content__three__second__1">
+							<div class="body__content__three__second__1__0">
+								буду рад
+							</div>
+							<div class="body__content__three__second__1__1">
+								подписке
+							</div>
+							<div class="body__content__three__second__1__2">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur.
+							</div>
+							<div class="body__content__three__second__1__3">
+								<button>подписаться</button>
+							</div>
+						</div>
+						<div class="body__content__three__second__1">
+							<div class="body__content__three__second__1__0">
+								буду рад
+							</div>
+							<div class="body__content__three__second__1__1">
+								лайку
+							</div>
+							<div class="body__content__three__second__1__2">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur voluptatibus atque et itaque, hic, deleniti. Sunt commodi tempora voluptatum dolorum.
+								<br>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint tenetur fugit vel, eligendi illum, placeat quo vero reiciendis consectetur tempora voluptatum dolorum.
+							</div>
+							<div class="body__content__three__second__1__3">
+								<button>лайк</button>
+							</div>
+						</div>
+						<div class="body__content__three__second__1">
+							<div class="body__content__three__second__1__0">
+								буду рад
+							</div>
+							<div class="body__content__three__second__1__1">
+								комментарию
+							</div>
+							<div class="body__content__three__second__1__2">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+							</div>
+							<div class="body__content__three__second__1__3">
+								<button>комментировать</button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="footer">
