--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 	<div class="main_container">
 		
-			<div class="block_hi">
-				<div class="block_hi_body">
+			<div class="block-hi">
+				<div class="block-hi-body">
 					<p>Привет, друг!</p>
 					<ul class="list">
 						<li>У тебя все получится!</li>
@@ -20,18 +20,18 @@
 						<li>Спасибо тебе за поддержку!</li>
 					</ul>
 				</div>
-				<div class="block_hi_img">
+				<div class="block-hi-img">
 					<img src="img/image.jpg" alt="">
 				</div>
 
 			</div>
-			<div class="body__content">
-				<div class="body__content__first">
-					<div class="body__content__first_img">
+			<div class="content">
+				<div class="content-first">
+					<div class="content-first-img">
 						<img src="img/image_2.jpg" alt="">
 					</div>
-					<div class="body__content__first_content">
-						<div class="body__content__first_text">
+					<div class="content-first-content">
+						<div class="content-first-text">
 							<p>Что такое FlexBox?</p>
 							Flexbox - это целый модуль, содержащий в себе набор свойств и их значений как для родителя flex-контейнера так и для его дочерних элементов flex-элементов. 
 							<br><br>
@@ -39,38 +39,38 @@
 						</div>
 					</div>
 				</div>
-				<div class="body__content__second">
-					<div class="body__content__second__mainText">
+				<div class="content-second">
+					<div class="content-second-mainText">
 						Колонки с flex-контейнерами
 					</div>
-					<div class="body__content__second__colomns">
-						<div class="body__content__second__colomns__first">
-							<div class="body__content__second__colomns__first__1">
+					<div class="content-second-colomns">
+						<div class="content-second-colomns-first">
+							<div class="content-second-colomns-first-1">
 								<div><img src="img/image_3.jpg" alt=""></div>
-								<div class="body__content__second__colomns__first__1__text">
+								<div class="second-colomns-first-1-text">
 									<p>The description for the image</p>
 									Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.
 								</div>
 							</div>
-							<div class="body__content__second__colomns__first__2">
+							<div class="content-second-colomns-first-2">
 								<div><img src="img/image_3.jpg" alt=""></div>
-								<div class="body__content__second__colomns__first__1__text">
+								<div class="second-colomns-first-1-text">
 									<p>The description for the image</p>
 									Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.
 								</div>
 							</div>
 						</div>
-						<div class="body__content__second__colomns__second">
-							<div class="body__content__second__colomns__second__1">
+						<div class="content-second-colomns-second">
+							<div class="content-second-colomns-second-1">
 								<div><img src="img/image_3.jpg" alt=""></div>
-								<div class="body__content__second__colomns__first__1__text">
+								<div class="second-colomns-first-1-text">
 									<p>The description for the image</p>
 									Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.
 								</div>
 							</div>
-							<div class="body__content__second__colomns__second__2">
+							<div class="content-second-colomns-second-2">
 								<div><img src="img/image_3.jpg" alt=""></div>
-								<div class="body__content__second__colomns__first__1__text">
+								<div class="second-colomns-first-1-text">
 									<p>The description for the image</p>
 									Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.
 								</div>
